--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon ./src/app.ts",
     "build": "tsc",
-    "start": "node ./dis/app.js"
+    "start": "node ./dist/app.js"
   },
   "keywords": [],
   "author": "",
