--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,11 +7,9 @@
     "strict": true,
     "skipLibCheck": true,
     "outDir": "./dist",
-
-    /* 👇 Estos son los que te faltan */
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "types": ["node", "express"]
+    "typeRoots": ["./node_modules/@types"]
   },
   "include": ["src"],
   "exclude": ["node_modules"]
